deploy/studentmgr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studentmgr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: studentmgr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studentmgr
                port:
                  number: 8080
